// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot when editing 1`] = `
<DocumentFragment>
  <div>
    <form>
      <input
        type="text"
        value="Default todo"
      />
      <button>
        Update
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Snapshot: Matches 1`] = `
<DocumentFragment>
  <div>
    <li>
      Default todo
    </li>
    <button>
      Edit
    </button>
    <button>
      X
    </button>
  </div>
</DocumentFragment>
`;
